--- a/MovieDB/MovieDetailsViewController.xib
+++ b/MovieDB/MovieDetailsViewController.xib
@@ -5,7 +5,8 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
-        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -28,80 +29,64 @@
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" directionalLockEnabled="YES" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PZN-pZ-g22">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie Title Label khv hvkjh mvm  kgh k kgv" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="288" translatesAutoresizingMaskIntoConstraints="NO" id="k8v-5P-NvY">
-                            <rect key="frame" x="16" y="16" width="288" height="41"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="288" id="AZf-Vi-qRn"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie Title Label " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k8v-5P-NvY">
+                            <rect key="frame" x="16" y="16" width="288" height="20.5"/>
+                            <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ImagePlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="JYB-8m-mKy">
-                            <rect key="frame" x="16" y="73" width="288" height="200"/>
+                            <rect key="frame" x="16" y="52.5" width="288" height="162"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="200" id="4Se-Fq-Od5"/>
-                                <constraint firstAttribute="width" constant="288" id="xfY-cT-5BS"/>
+                                <constraint firstAttribute="width" secondItem="JYB-8m-mKy" secondAttribute="height" multiplier="16:9" id="CLr-88-75x"/>
                             </constraints>
                         </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dji-SZ-6gB" userLabel="Date Label">
-                            <rect key="frame" x="16" y="289" width="144" height="21"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="144" id="3E0-0L-Ck2"/>
-                                <constraint firstAttribute="height" constant="21" id="xah-aP-guS"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date : " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dji-SZ-6gB" userLabel="Date Label">
+                            <rect key="frame" x="16" y="230.5" width="144" height="18"/>
+                            <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sGx-pJ-qKM" userLabel="Rating Label">
-                            <rect key="frame" x="160" y="289" width="144" height="21"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="144" id="FWB-Ak-pu3"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating : " textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sGx-pJ-qKM" userLabel="Rating Label">
+                            <rect key="frame" x="160" y="230.5" width="144" height="18"/>
+                            <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="288" translatesAutoresizingMaskIntoConstraints="NO" id="sKK-rl-od5" userLabel="Plot Label">
-                            <rect key="frame" x="16" y="326" width="288" height="224"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="288" id="TJy-5q-J8K"/>
-                            </constraints>
-                            <string key="text">Label dfg dfh erybwebyw nytrim nbvwtu netyjihbetutnemnho im4t70 ,9rmne6tf 8m o7968snbw vucqe5ybneom7 ,8m nbw4vcr tdghrtjy u78okj7 hgf cy vbnmo8 ,957 pmoneb vctv57 jo8k79 p,mon bvwce rtbjynk8 m968kn8 b7j6v5c 4 5v6b7 n857m9 p68n7 b76v5c uv6 bi7no8mp98 on8 iuv56cy45   7i6o8 p79km n8b7v 6c5  6v57b 68o ,9 m o8niebu wv45y </string>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label dfg dfh erybwebyw nytrim nbvwtu netyjihbetutnemnho im4t70 ,9rmne6tf 8m " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="288" translatesAutoresizingMaskIntoConstraints="NO" id="sKK-rl-od5" userLabel="Plot Label">
+                            <rect key="frame" x="16" y="264.5" width="288" height="64.5"/>
+                            <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
                     <constraints>
-                        <constraint firstItem="Dji-SZ-6gB" firstAttribute="top" secondItem="JYB-8m-mKy" secondAttribute="bottom" constant="16" id="0M2-4d-CeF"/>
-                        <constraint firstItem="k8v-5P-NvY" firstAttribute="leading" secondItem="PZN-pZ-g22" secondAttribute="leading" constant="16" id="3U6-2g-Vy7"/>
-                        <constraint firstItem="sGx-pJ-qKM" firstAttribute="leading" secondItem="PZN-pZ-g22" secondAttribute="centerX" id="AIT-uh-L0l"/>
-                        <constraint firstItem="Dji-SZ-6gB" firstAttribute="trailing" secondItem="PZN-pZ-g22" secondAttribute="centerX" id="Iir-qd-bqA"/>
-                        <constraint firstItem="sGx-pJ-qKM" firstAttribute="top" secondItem="JYB-8m-mKy" secondAttribute="bottom" constant="16" id="JbC-qI-V2F"/>
-                        <constraint firstItem="sKK-rl-od5" firstAttribute="top" secondItem="sGx-pJ-qKM" secondAttribute="bottom" constant="16" id="NCe-hm-QQG"/>
-                        <constraint firstItem="sKK-rl-od5" firstAttribute="leading" secondItem="PZN-pZ-g22" secondAttribute="leading" constant="16" id="P6H-Br-nsC"/>
-                        <constraint firstAttribute="bottom" secondItem="sKK-rl-od5" secondAttribute="bottom" constant="16" id="PD6-dk-bHv"/>
-                        <constraint firstAttribute="trailing" secondItem="k8v-5P-NvY" secondAttribute="trailing" constant="16" id="Pf3-lN-JNa"/>
-                        <constraint firstItem="sKK-rl-od5" firstAttribute="trailing" secondItem="PZN-pZ-g22" secondAttribute="trailing" constant="-16" id="STZ-QN-DHh"/>
-                        <constraint firstItem="sGx-pJ-qKM" firstAttribute="height" secondItem="Dji-SZ-6gB" secondAttribute="height" id="T0S-NU-BrT"/>
-                        <constraint firstItem="JYB-8m-mKy" firstAttribute="top" secondItem="k8v-5P-NvY" secondAttribute="bottom" constant="16" id="aaL-we-yRF"/>
-                        <constraint firstItem="sGx-pJ-qKM" firstAttribute="trailing" secondItem="PZN-pZ-g22" secondAttribute="trailing" constant="-16" id="ezz-tE-f8B"/>
-                        <constraint firstAttribute="trailing" secondItem="JYB-8m-mKy" secondAttribute="trailing" constant="16" id="gEq-7C-Yci"/>
-                        <constraint firstItem="k8v-5P-NvY" firstAttribute="top" secondItem="PZN-pZ-g22" secondAttribute="top" constant="16" id="ozh-SP-6cI"/>
-                        <constraint firstItem="Dji-SZ-6gB" firstAttribute="leading" secondItem="PZN-pZ-g22" secondAttribute="leading" constant="16" id="uX3-Tf-1eF"/>
-                        <constraint firstItem="JYB-8m-mKy" firstAttribute="leading" secondItem="PZN-pZ-g22" secondAttribute="leading" constant="16" id="wxT-5d-3Xo"/>
+                        <constraint firstItem="sKK-rl-od5" firstAttribute="leading" secondItem="PZN-pZ-g22" secondAttribute="leading" constant="16" id="9ZD-nQ-zIc"/>
+                        <constraint firstItem="sGx-pJ-qKM" firstAttribute="width" secondItem="JYB-8m-mKy" secondAttribute="width" multiplier="0.5" id="CvH-68-V0V"/>
+                        <constraint firstItem="k8v-5P-NvY" firstAttribute="leading" secondItem="PZN-pZ-g22" secondAttribute="leading" constant="16" id="DXJ-e6-ioO"/>
+                        <constraint firstAttribute="trailing" secondItem="sKK-rl-od5" secondAttribute="trailing" constant="16" id="EDF-Xg-dOk"/>
+                        <constraint firstItem="JYB-8m-mKy" firstAttribute="leading" secondItem="PZN-pZ-g22" secondAttribute="leading" constant="16" id="PfA-ds-XqY"/>
+                        <constraint firstItem="JYB-8m-mKy" firstAttribute="top" secondItem="k8v-5P-NvY" secondAttribute="bottom" constant="16" id="UA7-fB-kea"/>
+                        <constraint firstItem="Dji-SZ-6gB" firstAttribute="top" secondItem="JYB-8m-mKy" secondAttribute="bottom" constant="16" id="Ux0-up-eVg"/>
+                        <constraint firstAttribute="trailing" secondItem="JYB-8m-mKy" secondAttribute="trailing" constant="16" id="agJ-W4-Js0"/>
+                        <constraint firstItem="sGx-pJ-qKM" firstAttribute="top" secondItem="JYB-8m-mKy" secondAttribute="bottom" constant="16" id="eY7-cN-uWX"/>
+                        <constraint firstAttribute="trailing" secondItem="k8v-5P-NvY" secondAttribute="trailing" constant="16" id="fIS-Jy-255"/>
+                        <constraint firstItem="Dji-SZ-6gB" firstAttribute="width" secondItem="JYB-8m-mKy" secondAttribute="width" multiplier="0.5" id="fnH-p3-LCQ"/>
+                        <constraint firstAttribute="trailing" secondItem="sGx-pJ-qKM" secondAttribute="trailing" constant="16" id="h08-70-9YY"/>
+                        <constraint firstItem="k8v-5P-NvY" firstAttribute="width" secondItem="PZN-pZ-g22" secondAttribute="width" constant="-32" id="hYU-Tl-doX"/>
+                        <constraint firstAttribute="bottom" secondItem="sKK-rl-od5" secondAttribute="bottom" constant="32" id="nqP-Dk-Wim"/>
+                        <constraint firstItem="Dji-SZ-6gB" firstAttribute="leading" secondItem="PZN-pZ-g22" secondAttribute="leading" constant="16" id="vvk-zQ-kkP"/>
+                        <constraint firstItem="sKK-rl-od5" firstAttribute="top" secondItem="sGx-pJ-qKM" secondAttribute="bottom" constant="16" id="y7d-Ps-YW8"/>
+                        <constraint firstItem="k8v-5P-NvY" firstAttribute="top" secondItem="PZN-pZ-g22" secondAttribute="top" constant="16" id="z05-Up-ic5"/>
                     </constraints>
                 </scrollView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="PZN-pZ-g22" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="JrP-7I-jBl"/>
-                <constraint firstAttribute="bottom" secondItem="PZN-pZ-g22" secondAttribute="bottom" id="LAH-6W-Xxn"/>
-                <constraint firstItem="PZN-pZ-g22" firstAttribute="trailing" secondItem="i5M-Pr-FkT" secondAttribute="trailing" id="XId-hx-yze"/>
-                <constraint firstItem="PZN-pZ-g22" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="etW-Dg-aBB"/>
-                <constraint firstItem="PZN-pZ-g22" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="jiT-tx-jU9"/>
+                <constraint firstItem="PZN-pZ-g22" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="8o1-A9-J1y"/>
+                <constraint firstItem="PZN-pZ-g22" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="AZs-0q-3FT"/>
+                <constraint firstAttribute="bottom" secondItem="PZN-pZ-g22" secondAttribute="bottom" id="GFb-hs-gVy"/>
+                <constraint firstAttribute="trailing" secondItem="PZN-pZ-g22" secondAttribute="trailing" id="OFb-Sj-kks"/>
             </constraints>
         </view>
     </objects>
