--- a/MovieDB/SortSelectionViewController.xib
+++ b/MovieDB/SortSelectionViewController.xib
@@ -30,10 +30,10 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="sET-yX-Ld4" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="DQ3-y5-OiZ"/>
-                <constraint firstAttribute="trailing" secondItem="sET-yX-Ld4" secondAttribute="trailing" id="EDq-hI-x8U"/>
-                <constraint firstAttribute="bottom" secondItem="sET-yX-Ld4" secondAttribute="bottom" id="PSH-5I-RSc"/>
-                <constraint firstItem="sET-yX-Ld4" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="lef-na-A6o"/>
+                <constraint firstAttribute="bottom" secondItem="sET-yX-Ld4" secondAttribute="bottom" id="6lK-UF-qeL"/>
+                <constraint firstAttribute="trailing" secondItem="sET-yX-Ld4" secondAttribute="trailing" id="BYb-ng-A1y"/>
+                <constraint firstItem="sET-yX-Ld4" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="obl-gn-vv3"/>
+                <constraint firstItem="sET-yX-Ld4" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="rHh-9Q-RxU"/>
             </constraints>
         </view>
     </objects>
